// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageMenu render 1`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="current-page-drop-model"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="button"
    type="button"
  >
    2
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="current-page-drop-model"
    className="dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      Jump To
    </li>
    <li
      className=""
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        First Page
      </a>
    </li>
    <li
      className=""
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Last Page
      </a>
    </li>
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      34
       Total Pages
    </li>
  </ul>
</div>
`;

exports[`PageMenu render 2`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="current-page-drop-model"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="button"
    type="button"
  >
    2
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="current-page-drop-model"
    className="dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      Jump To
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        First Page
      </a>
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Last Page
      </a>
    </li>
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      ...
       Total Pages
    </li>
  </ul>
</div>
`;

exports[`PageMenu render 3`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="current-page-drop-model"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="button"
    type="button"
  >
    2
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="current-page-drop-model"
    className="dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      Jump To
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        First Page
      </a>
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Last Page
      </a>
    </li>
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      ...
       Total Pages
    </li>
  </ul>
</div>
`;

exports[`PageMenu render 4`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="current-page-drop-model"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="button"
    type="button"
  >
    2
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="current-page-drop-model"
    className="dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      Jump To
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        First Page
      </a>
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Last Page
      </a>
    </li>
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      ...
       Total Pages
    </li>
  </ul>
</div>
`;
